(Navbar) Moved navbar style into the variants (AppComponent) Moved boxed class to the body Fixed: Horizontal layout navbar covers entire screen

--- a/src/@fuse/scss/partials/_global.scss
+++ b/src/@fuse/scss/partials/_global.scss
@@ -11,3 +11,14 @@ body {
     overflow: hidden;
     background: #F5F5F5;
 }
+
+body {
+
+    // Boxed
+    &.boxed {
+        max-width: 1200px;
+        margin: 0 auto;
+
+        @include mat-elevation(8);
+    }
+}
