--- a/src/app/layout/vertical/layout-1/layout-1.component.scss
+++ b/src/app/layout/vertical/layout-1/layout-1.component.scss
@@ -16,13 +16,6 @@ vertical-layout-1 {
         z-index: 1;
         min-width: 0;
 
-        // Boxed
-        &.boxed {
-            max-width: 1200px;
-            margin: 0 auto;
-            @include mat-elevation(8);
-        }
-
         // Container 1
         > .container {
             position: relative;
